Fix bug when rounding difference of floats when < 0.5.

BUG: 384547
FIXED-IN: 3.1